--- a/k8s/nginx/values.yaml
+++ b/k8s/nginx/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: nginx
-  tag: 1.15.11
+  tag: latest
   pullPolicy: IfNotPresent
 
 staticIp: 192.168.189.50
